tools/main_stubs.h

typedef int64_t off_t;
int atexit(void (*func)(void));
#define _(s) (s)
struct b;
 typedef struct b B;
struct p;
 typedef struct p P;
struct kbd;
 typedef struct kbd KBD;
struct kmap;
 typedef struct kmap KMAP;
struct bstack;
struct window;
 typedef struct window W;
struct screen;
 typedef struct screen Screen;
struct bw;
 typedef struct bw BW;
struct macro;
 typedef struct macro MACRO;
struct high_syntax;
struct lattr_db;
struct charmap;
struct cap;
 typedef struct cap CAP;
struct jfile;
 typedef struct jfile JFILE;
 typedef struct vt_context VT;
struct vfile;
 typedef struct vfile VFILE;
struct macro {
	ptrdiff_t what;
	int k;
	int flg;
	const CMD *cmd;
	ptrdiff_t n;
	ptrdiff_t size;
	MACRO **steps;
};
struct watom {
	const char *context;
	void (*disp)(W *w, int flg);
	void (*follow)(W *w);
	int (*abort)(W *w);
	int (*rtn)(W *w);
	int (*type)(W *w, int k);
	void (*resize)(W *w, ptrdiff_t width, ptrdiff_t height);
	void (*move)(W *w, ptrdiff_t x, ptrdiff_t y);
	void (*ins)(W *w, B *b, off_t l, off_t n, int flg);
	void (*del)(W *w, B *b, off_t l, off_t n, int flg);
	int what;
};
typedef struct watom WATOM;
struct scrn {
	char _pad0[8];
	ptrdiff_t li;
	ptrdiff_t co;
	char _pad1[760];
	int *updtab;
	char _pad2[48];
};
typedef struct scrn SCRN;
struct screen {
	SCRN *t;
	ptrdiff_t wind;
	W *topwin;
	W *curwin;
	ptrdiff_t w, h;
};
struct window {
	LINK(W) link;
	Screen *t;
	ptrdiff_t x, y, w, h;
	ptrdiff_t ny, nh;
	ptrdiff_t reqh;
	ptrdiff_t fixed;
	ptrdiff_t hh;
	W *win;
	W *main;
	W *orgwin;
	ptrdiff_t curx, cury;
	KBD *kbd;
	const WATOM *watom;
	void *object;
	const char *msgt;
	const char *msgb;
	const char *huh;
	int *notify;
	struct bstack *bstack;
};
struct options {
	struct options *next;
	const char *ftype;
	void *match;
	int overtype;
	off_t lmargin;
	off_t rmargin;
	int autoindent;
	int wordwrap;
	int nobackup;
	char _pad_tab[4];
	off_t tab;
	int indentc;
	char _pad_istep[4];
	off_t istep;
	const char *context;
	const char *lmsg;
	const char *rmsg;
	const char *smsg;
	const char *zmsg;
	int linums;
	int hiline;
	int readonly;
	int french;
	int flowed;
	int spaces;
	int crlf;
	int highlight;
	int visiblews;
	int syntax_debug;
	const char *syntax_name;
	struct high_syntax *syntax;
	const char *map_name;
	struct charmap *charmap;
	const char *language;
	int smarthome;
	int indentfirst;
	int smartbacks;
	int purify;
	int picture;
	int highlighter_context;
	int single_quoted;
	int no_double_quoted;
	int c_comment;
	int cpp_comment;
	int hash_comment;
	int vhdl_comment;
	int semi_comment;
	int tex_comment;
	int hex;
	int viewmode;
	int ansi;
	int title;
	const char *text_delimiters;
	const char *cpara;
	const char *cnotpara;
	MACRO *mnew;
	MACRO *mold;
	MACRO *msnew;
	MACRO *msold;
	MACRO *mfirst;
};
typedef struct options OPTIONS;
struct p {
	LINK(P) link;
	B *b;
	char _pad0[24];
	off_t byte;
	off_t line;
	off_t col;
	off_t xcol;
	int valcol;
	int end;
	int attr;
	int valattr;
	P **owner;
	const char *tracker;
};
typedef int pid_t;
/* Layout mirrors gapbuffer/types.zig B (size 632) */
struct b {
	LINK(B) link;
	P *bof;
	P *eof;
	char *name;
	char _pad1[36];
	int orphan;
	int count;
	int changed;
	int backup;
	char _pad_backup[4];
	void *undo;
	char _pad_marks[88];
	OPTIONS o;
	P *oldcur;
	P *oldtop;
	P *err;
	char *current_dir;
	int shell_flag;
	int rdonly;
	int internal;
	int scratch;
	int er;
	pid_t pid;
	int out;
	VT *vt;
	int raw;
	char _pad_raw[4];
	void *db;
	void (*parseone)(struct charmap *map, const char *s, char **rtn_name, off_t *rtn_line);
};
struct bw {
	W *parent;
	B *b;
	P *top;
	P *cursor;
	off_t offset;
	Screen *t;
	ptrdiff_t h, w, x, y;
	OPTIONS o;
	void *object;
	int lincols;
	off_t curlin;
	int top_changed;
	struct lattr_db *db;
	int shell_flag;
	int pasting;
	int last_viewmode;
	struct { int ww, ai, sp; } saved;
};
struct kbd {
	KMAP *curmap;
	KMAP *topmap;
	int seq[16];
	ptrdiff_t x;
};
struct charmap {
	void *next;
	const char *name;
	int type;
	char _pad_type[4];
	int (*is_punct)(struct charmap *map, int c);
	int (*is_print)(struct charmap *map, int c);
	int (*is_space)(struct charmap *map, int c);
	int (*is_alpha_)(struct charmap *map, int c);
	int (*is_alnum_)(struct charmap *map, int c);
	int (*to_lower)(struct charmap *map, int c);
	int (*to_upper)(struct charmap *map, int c);
	char _pad[2684];
};
void vsrm(char *s);
char *namprt(const char *path);
char *joesep(char *path);
const char *xdg_config_dir(void);
JFILE *jfopen(const char *name, const char *mode);
int procrc(CAP *cap, JFILE *f, char *name);
int validate_rc(void);
void cmd_help(int type);
int glopt(char *s, char *arg, OPTIONS *options, int set);
CAP *my_getcap(char *name, long baud, void (*out)(void *outptr, char c), void *outptr);
SCRN *nopen(CAP *cap);
void nclose(SCRN *t);
int nresize(SCRN *t, ptrdiff_t w, ptrdiff_t h);
void nscroll(SCRN *t, int atr);
int cpos(SCRN *t, ptrdiff_t x, ptrdiff_t y);
void zig_scrn_swap_flush(SCRN *t, ptrdiff_t x, ptrdiff_t y);
Screen *screate(SCRN *scrn);
void sresize(Screen *t);
W *lastw(Screen *t);
int wnext(Screen *t);
void wshowall(Screen *t);
void wredraw(W *w);
void msgout(W *w);
void msgclr(W *w);
void msgnw(W *w, const char *s);
void msgnwt(W *w, const char *s);
BW *wmktw(Screen *t, B *b);
BW *bwmk(W *window, B *b, int prompt);
void bwrm(BW *bw);
int uduptw(W *w, int k);
off_t get_file_pos(const char *name);
void init_visiblews(void);
void viewmode_cleanup(void);
B *bfind(const char *s);
B *bfind_scratch(const char *s);
B *bcpy(P *from, P *to);
void brmall(void);
int bsavefd(P *p, int fd, off_t size);
void binss(P *p, const char *s);
P *pdup(P *p, const char *where);
void prm(P *p);
P *pline(P *p, off_t line);
void p_goto_bol(P *p);
int piseof(P *p);
void lazy_opts(B *b, OPTIONS *o);
int modify_logic(BW *bw, B *b);
int cstart(BW *bw, const char *name, char **s, void *obj, int *notify, int build, int out_only, const char *first_command, int type);
void setup_history(B **history);
void append_history(B *hist, char *s, ptrdiff_t len);
MACRO *mparse(MACRO *m, const char *buf, ptrdiff_t *sta, int secure);
MACRO *dokey(KBD *kbd, int n);
int exemac(MACRO *m, int k);
void exemac_pasting(int state);
int exmacro(MACRO *m, int u, int k);
void chmac(void);
KBD *mkkbd(KMAP *kmap);
KMAP *kmap_getcontext(const char *name);
int help_on(Screen *t);
void help_display(Screen *t);
int init_colors(void);
void load_state(void);
void save_state(void);
void joe_iswinit(void);
void joe_locale(void);
const char *my_gettext(const char *s);
char *stagen(char *stalin, BW *bw, const char *s, int fill);
int ttflsh(void);
int ttgetch(void);
int ttcheck(void);
void ttgtsz(ptrdiff_t *x, ptrdiff_t *y);
VFILE *vtmp(void);
void vclose(VFILE *v);
int uquote(W *w, int k);
int utype(W *w, int k);
int urtn(W *w, int k);
extern int staupd;
extern int have;
extern unsigned char havec;
extern int leave;
extern int idleout;
extern int notite;
extern int noxon;
extern int Baud;
extern int dopadding;
extern char *joeterm;
extern int env_lines;
extern int env_columns;
extern int bg_text;
extern int zig_screen_swap_enabled;
extern int orphan;
extern int opt_mid;
extern int berror;
extern B *filehist;
extern char msgbuf[JOE_MSGBUFSIZE];
extern const char *const msgs[];
extern struct charmap *locale_map;
extern const char *locale_msgs;
extern VFILE *vmem;