src/main.zig

pub extern fn vsrm(s: [*c]u8) void;
pub extern fn namprt(path: [*c]const u8) [*c]u8;
pub extern fn joesep(path: [*c]u8) [*c]u8;
pub extern fn xdg_config_dir() [*c]const u8;
pub extern fn jfopen(name: [*c]const u8, mode: [*c]const u8) ?*JFILE;
pub extern fn procrc(cap: ?*CAP, f: ?*JFILE, name: [*c]u8) c_int;
pub extern fn validate_rc() c_int;
pub extern fn cmd_help(@"type": c_int) void;
pub extern fn glopt(s: [*c]u8, arg: [*c]u8, options: [*c]OPTIONS, set: c_int) c_int;
pub extern fn my_getcap(name: [*c]u8, baud: c_long, out: ?*const fn (outptr: ?*anyopaque, c: u8) callconv(.c) void, outptr: ?*anyopaque) ?*CAP;
pub extern fn nopen(cap: ?*CAP) [*c]SCRN;
pub extern fn nclose(t: [*c]SCRN) void;
pub extern fn nresize(t: [*c]SCRN, w: ptrdiff_t, h: ptrdiff_t) c_int;
pub extern fn nscroll(t: [*c]SCRN, atr: c_int) void;
pub extern fn cpos(t: [*c]SCRN, x: ptrdiff_t, y: ptrdiff_t) c_int;
pub extern fn zig_scrn_swap_flush(t: [*c]SCRN, x: ptrdiff_t, y: ptrdiff_t) void;
pub extern fn screate(scrn: [*c]SCRN) [*c]Screen;
pub extern fn sresize(t: [*c]Screen) void;
pub extern fn lastw(t: [*c]Screen) [*c]W;
pub extern fn wnext(t: [*c]Screen) c_int;
pub extern fn wshowall(t: [*c]Screen) void;
pub extern fn wredraw(w: [*c]W) void;
pub extern fn msgout(w: [*c]W) void;
pub extern fn msgclr(w: [*c]W) void;
pub extern fn msgnw(w: [*c]W, s: [*c]const u8) void;
pub extern fn msgnwt(w: [*c]W, s: [*c]const u8) void;
pub extern fn wmktw(t: [*c]Screen, b: [*c]B) [*c]BW;
pub extern fn bwmk(window: [*c]W, b: [*c]B, prompt: c_int) [*c]BW;
pub extern fn bwrm(bw: [*c]BW) void;
pub extern fn uduptw(w: [*c]W, k: c_int) c_int;
pub extern fn get_file_pos(name: [*c]const u8) off_t;
pub extern fn init_visiblews() void;
pub extern fn viewmode_cleanup() void;
pub extern fn bfind(s: [*c]const u8) [*c]B;
pub extern fn bfind_scratch(s: [*c]const u8) [*c]B;
pub extern fn bcpy(from: [*c]P, to: [*c]P) [*c]B;
pub extern fn brmall() void;
pub extern fn bsavefd(p: [*c]P, fd: c_int, size: off_t) c_int;
pub extern fn binss(p: [*c]P, s: [*c]const u8) void;
pub extern fn pdup(p: [*c]P, where: [*c]const u8) [*c]P;
pub extern fn prm(p: [*c]P) void;
pub extern fn pline(p: [*c]P, line: off_t) [*c]P;
pub extern fn p_goto_bol(p: [*c]P) void;
pub extern fn piseof(p: [*c]P) c_int;
pub extern fn lazy_opts(b: [*c]B, o: [*c]OPTIONS) void;
pub extern fn modify_logic(bw: [*c]BW, b: [*c]B) c_int;
pub extern fn cstart(bw: [*c]BW, name: [*c]const u8, s: [*c][*c]u8, obj: ?*anyopaque, notify: [*c]c_int, build: c_int, out_only: c_int, first_command: [*c]const u8, @"type": c_int) c_int;
pub extern fn setup_history(history: [*c][*c]B) void;
pub extern fn append_history(hist: [*c]B, s: [*c]u8, len: ptrdiff_t) void;
pub extern fn mparse(m: [*c]MACRO, buf: [*c]const u8, sta: [*c]ptrdiff_t, secure: c_int) [*c]MACRO;
pub extern fn dokey(kbd: [*c]KBD, n: c_int) [*c]MACRO;
pub extern fn exemac(m: [*c]MACRO, k: c_int) c_int;
pub extern fn exemac_pasting(state: c_int) void;
pub extern fn exmacro(m: [*c]MACRO, u: c_int, k: c_int) c_int;
pub extern fn chmac() void;
pub extern fn mkkbd(kmap: ?*KMAP) [*c]KBD;
pub extern fn kmap_getcontext(name: [*c]const u8) ?*KMAP;
pub extern fn help_on(t: [*c]Screen) c_int;
pub extern fn help_display(t: [*c]Screen) void;
pub extern fn init_colors() c_int;
pub extern fn load_state() void;
pub extern fn save_state() void;
pub extern fn joe_iswinit() void;
pub extern fn joe_locale() void;
pub extern fn my_gettext(s: [*c]const u8) [*c]const u8;
pub extern fn stagen(stalin: [*c]u8, bw: [*c]BW, s: [*c]const u8, fill: c_int) [*c]u8;
pub extern fn ttflsh() c_int;
pub extern fn ttgetch() c_int;
pub extern fn ttcheck() c_int;
pub extern fn ttgtsz(x: [*c]ptrdiff_t, y: [*c]ptrdiff_t) void;
pub extern fn vtmp() ?*VFILE;
pub extern fn vclose(v: ?*VFILE) void;
pub extern fn uquote(w: [*c]W, k: c_int) c_int;
pub extern fn utype(w: [*c]W, k: c_int) c_int;
pub extern fn urtn(w: [*c]W, k: c_int) c_int;
pub extern var staupd: c_int;
pub extern var have: c_int;
pub extern var havec: u8;
pub extern var leave: c_int;
pub extern var idleout: c_int;
pub extern var notite: c_int;
pub extern var noxon: c_int;
pub extern var Baud: c_int;
pub extern var dopadding: c_int;
pub extern var joeterm: [*c]u8;
pub extern var env_lines: c_int;
pub extern var env_columns: c_int;
pub extern var bg_text: c_int;
pub extern var zig_screen_swap_enabled: c_int;
pub extern var orphan: c_int;
pub extern var opt_mid: c_int;
pub extern var berror: c_int;
pub extern var filehist: [*c]B;
pub extern var msgbuf: [300]u8;
pub const msgs: [*c]const [*c]const u8 = @extern([*c]const [*c]const u8, .{
    .name = "msgs",
});
pub extern var locale_map: [*c]struct_charmap;
pub extern var locale_msgs: [*c]const u8;
pub extern var vmem: ?*VFILE;
pub export var exmsg: [*c]u8 = null;
pub export var xmsg: [*c]u8 = null;
pub export var usexmouse: c_int = 0;
pub export var xmouse: c_int = 0;
pub export var nonotice: c_int = 0;
pub export var noexmsg: c_int = 0;
pub export var pastehack: c_int = 0;
pub export var helpon: c_int = 0;
pub export var maint: [*c]Screen = null;
pub export var dostaupd: c_int = 1;
pub export fn dofollows() void {
    var w: [*c]W = maint.*.curwin;
    while (true) {
        if ((w.*.y != -1) and (w.*.h != 0) and (w.*.watom.*.follow != null) and (w.*.object != null)) {
            w.*.watom.*.follow.?(w);
        }
        w = w.*.link.next;
        if (w == maint.*.curwin) break;
    }
}
pub export fn edupd(arg_flg: c_int) void {
    const flg = arg_flg;
    var w: [*c]W = undefined;
    var wid: ptrdiff_t = undefined;
    var hei: ptrdiff_t = undefined;
    if (dostaupd != 0) {
        staupd = 1;
        dostaupd = 0;
    }
    ttgtsz(&wid, &hei);
    if (nresize(maint.*.t, wid, hei) != 0) {
        sresize(maint);
    }
    dofollows();
    _ = ttflsh();
    nscroll(maint.*.t, bg_text);
    help_display(maint);
    w = maint.*.curwin;
    while (true) {
        if (w.*.y != @as(ptrdiff_t, -@as(c_int, 1))) {
            if ((w.*.object != null) and (w.*.watom.*.disp != null)) {
                w.*.watom.*.disp.?(w, flg);
            }
            msgout(w);
        }
        w = w.*.link.next;
        if (!(w != maint.*.curwin)) break;
    }
    if (zig_screen_swap_enabled != 0) {
        zig_scrn_swap_flush(maint.*.t, maint.*.curwin.*.x + maint.*.curwin.*.curx, maint.*.curwin.*.y + maint.*.curwin.*.cury);
    } else {
        _ = cpos(maint.*.t, maint.*.curwin.*.x + maint.*.curwin.*.curx, maint.*.curwin.*.y + maint.*.curwin.*.cury);
    }
    staupd = 0;
}
pub var ahead: c_int = 0;
pub var ungot: c_int = 0;
pub var ungotc: c_int = 0;
pub export fn nungetc(arg_c: c_int) void {
    var c = arg_c;
    _ = &c;
    if ((c != (@as(c_int, 'C') - @as(c_int, '@'))) and (c != (@as(c_int, 'M') - @as(c_int, '@')))) {
        chmac();
        ungot = 1;
        ungotc = c;
    }
}
